--- a/css/snap.css
+++ b/css/snap.css
@@ -60,14 +60,34 @@
 	opacity:				1;
 }
 
-.preview img {
+#snapTitle {
+	display:				block;
+	width:					80%;
+	max-width:				450px;
+	margin:					5px auto 15px auto;
+	height:					40px;
+	border:					none;
+	background-color:		rgb(235, 245, 255);
+	color:					rgb(70, 100, 120);
+	font-family:			'Pacifico', cursive;
+	font-weight:			100;
+	font-style:				normal;
+	text-align: 			center;
+	font-size:				1.5em;
+}
+
+/* #snapTitle:active {
+	border:				none;
+} */
+
+/* .preview img {
 	display:				block;
 	margin:					auto auto auto auto;
 	width:					98%;
 	max-width:				480px;
 	max-height:				360px;
 	border-radius:			30px;
-}
+} */
 
 .stickers {
 	width:					100%;
@@ -122,7 +142,7 @@
 	width:					90%;
 	max-width:				480px;
 	display:				block;
-	margin:					0px auto 0px auto;
+	margin:					10px auto 0px auto;
 }
 
 #filter {
