some fixes and new sample for camagru wiki

--- a/css/snap.css
+++ b/css/snap.css
@@ -8,8 +8,8 @@
 
 .categoryTitleGrid {
 	display:				grid;
-	grid-template-columns:	1fr 50px;
-	width:					260px;
+	grid-template-columns:	1fr 50px 50px;
+	width:					290px;
 	margin:					0px auto 0px auto;
 }
 
@@ -29,6 +29,17 @@
 	border-radius:			7px;
 	width:					50px;
 	height:					50px;
+}
+
+#upload {
+	background-image: 		url(../img/upload.png);
+	background-size:		100%;
+}
+
+input[type=file] {
+	width:					100%;
+	height:					100%;
+	opacity:				0;
 }
 
 .takeshot:hover	{
@@ -187,11 +198,21 @@
 
 #filter {
 	position:				absolute;
-	display:				block;
+	display:				none;
 	left:					0px;
 	right:					0px;
 	height:					100%;
 	z-index:				4;
+}
+
+#uploadPhoto {
+	display:				none;
+	position:				absolute;
+	border-radius:			40px;
+	left:					0px;
+	right:					0px;
+	height:					100%;
+	z-index:				3;
 }
 
 #video {
