--- a/css/headerFooter.css
+++ b/css/headerFooter.css
@@ -417,12 +417,13 @@ footer {
 footer div {
 	display:					block;
 	color:						white;
+	position:					absolute;
+	top:						2px;
+	right:						0px;
 	font-size:					16px;
 	font-weight:				300;
 	text-shadow:				1px 1px 2px rgb(76, 108, 134), 0 0 1em rgb(26, 68, 94);
-	width:						17em;
-	margin-right:				0;
-	margin-left:				auto;
+	height:						1em;
 }
 
 @media (max-width: 400px) {
