--- a/css/profile.css
+++ b/css/profile.css
@@ -4,7 +4,7 @@
 	text-align:					center;
 	display:					grid;
 	grid-template-columns:		repeat(5, 1fr);
-	grid-auto-rows:				270px;
+	grid-auto-rows:				295px;
 }
 
 @media (max-width: 1650px) {
@@ -38,8 +38,9 @@
 .item	{
 	display:					inline-block;
 	position:					relative;
-	width:						300px;
-	height:						255px;
+	width:						100%;
+	max-width:					300px;
+	height:						280px;/*255px;*/
 	background-color:			white;
 	box-shadow:					0 0 10px rgba(0,0,0,0.4);
 	border:						1px solid rgb(150, 150, 150);
