--- a/css/profile.css
+++ b/css/profile.css
@@ -38,15 +38,13 @@
 .item	{
 	display:					inline-block;
 	position:					relative;
-	width:						100%;
-	max-width:					300px;
-	height:						280px;/*255px;*/
+	width:						300px;
+	height:						280px;
 	background-color:			white;
 	box-shadow:					0 0 10px rgba(0,0,0,0.4);
 	border:						1px solid rgb(150, 150, 150);
 	border-radius:				10px;
 	margin:						auto 5px auto 5px;
-	/* border:						1px solid red; */
 }
 
 .delete {
@@ -185,4 +183,25 @@
 
 .comments:active {
 	background-color:			rgb(100, 140, 180);
+}
+
+#getPhotos {
+	display:					block;
+	width:						80px;
+	margin:						0px auto 0px auto;
+	opacity:					0.6;
+	transition-delay:			0s;
+	transition-duration:		0.3s;
+	transition-timing-function: ease;
+}
+
+#getPhotos:hover {
+	opacity:					0.95;
+	transition-delay:			0s;
+	transition-duration:		0.3s;
+	transition-timing-function: ease;
+}
+
+#getPhotos:active {
+	opacity:					1;
 }
